# qt-tool

./: Cargo.toml  README.md  config.toml  example_config.toml  run.bat  run.sh
.github/workflows/: release.yml
plug/: README.md  index.tsx  test.html
plug/codesign-qt-helper/: manifest.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
plug/codesign-qt-helper/src/: background.ts  constant.ts  content.ts  message.ts
plug/codesign-qt-helper/src/net/: api.ts  reponse.ts  request.ts
plug/codesign-qt-helper/src/popup/: index.tsx  popup.html
plug/codesign-qt-helper/src/popup/page/: ConfigPage.tsx  DialogPage.tsx  HistoryPage.tsx  HomePage.tsx
plug/codesign-qt-helper/src/store/: config-store.ts  history-sotre.ts
src/: cli.rs  handler.rs  lib.rs  logger.rs  main.rs  net.rs  record.rs  server.rs
src/cli/: handler.rs
src/server/: app_state.rs  config.rs  handler.rs  router.rs  util.rs
src/server/router/: process.rs  user.rs
src/server/router/process/: dto.rs
src/server/router/user/dto/: request.rs  response.rs
src/server/util/: result_util.rs
src/util/: result_util.rs
