[package]
name = "qt-tool"
version = "0.1.0"
edition = "2024"
description = "切图工具"

[[bin]]
name = "qt"
path = "src/main.rs"

[dependencies]

anyhow = "1.0.101"
## http相关
tokio = { version = "1.49.0" ,features = ["full"]} # 异步运行时
axum = { version = "0.8.8" ,features = ["json","tokio"]} # http服务
tower-http = { version = "0.6.8" ,features = ["cors"]} # 中间件，允许跨域

## 序列化相关
serde = { version = "1.0.228" ,features = ["derive"]} # 序列化
serde_json = "1.0.149"
toml = "1.0.1"
bytes = "1.11.1"
mime = "0.3.17"

## cli 解析
clap = { version = "4.5" ,features = ["derive"]}
## zip解压
zip = "8.0.0"
